added notes browser ui

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-header></app-header>
-test text
+
+<div class="layout">
+  <app-header class="header"></app-header>
+  <app-browser class="browser"></app-browser>
+</div>
