--- a/src/styles/colors.less
+++ b/src/styles/colors.less
@@ -3,7 +3,15 @@
 
 @primary-background-color: rgba(252, 250, 246, 1);
 @secondary-background-color: rgba(255, 253, 250, 1);
+
+@section-primary-background-color: rgba(250, 248, 246, 1);
+@section-secondary-background-color: rgba(245, 232, 241, 1);
+
 @action-secondary-background-color: rgba(236, 233, 229, 1);
 
 @primary-border-color: rgba(153, 139, 114, 1);
+
+@section-primary-border-color: rgba(234, 231, 228, 1);
+@section-secondary-border-color: rgba(229, 226, 223, 1);
+
 @action-secondary-border-color: rgba(227, 223, 216, 1);
