--- a/src/styles/icons.less
+++ b/src/styles/icons.less
@@ -1,7 +1,7 @@
 @import './colors.less';
 
 .icon {
-  display: block;
+  display: inline-block;
   width: 2rem;
   height: 2rem;
   background-position: top center;
@@ -29,5 +29,9 @@
 
   &.arrow-right {
     background-image: url('/assets/icons/arrow_right-24px.svg');
+  }
+
+  &.expand-more {
+    background-image: url('/assets/icons/expand_more-24px.svg');
   }
 }
