--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,9 +1,19 @@
 @import './fonts.less';
 @import './colors.less';
 @import './icons.less';
+@import './dragula.less';
+@import './actions.less';
 
 html {
   font-size: 16px;
   color: @primary-text-color;
   background-color: @primary-background-color;
+}
+
+p {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  line-height: 1rem;
+  font-size: 1rem;
 }
