created wrapper component for page widgets

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 
 <div class="layout">
   <app-header class="header"></app-header>
-  <app-browser class="browser"></app-browser>
+
+  <app-widget title="Browser" class="browser">
+    <app-browser></app-browser>
+  </app-widget>
+
 </div>
