--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -1,8 +1,10 @@
 .layout {
   display: grid;
   grid-template-rows: auto 1fr;
+  grid-template-columns: 20rem 1fr;
 }
 
 .header {
   margin-bottom: 2rem;
+  grid-column: e('1 / 3');
 }
