--- a/src/app/browse/components/browser/browser.component.less
+++ b/src/app/browse/components/browser/browser.component.less
@@ -1,12 +1,9 @@
-@import '../../../../styles/colors.less';
 @import '../../../../styles/destyle-lists.less';
 
-:host {
-  border: 2px solid @section-primary-border-color;
-  background-color: @section-primary-background-color;
-  width: 20%;
-  height: 100%;
-  padding: 1rem;
+
+.browser {
+  width: 100%;
+  overflow-x: auto;
 }
 
 .entries-group:not(:last-of-type) {
