--- a/src/app/widget/widget.component.html
+++ b/src/app/widget/widget.component.html
@@ -1,6 +1,6 @@
 <div class="widget-wrapper">
-  <div class="widget-title">
-    {{title}}
+  <div class="widget-title expanded" appExpandable>
+    <span>{{title}}</span>
   </div>
   <div class="widget-content">
     <ng-content></ng-content>
