--- a/frontend/src/styles/actions.less
+++ b/frontend/src/styles/actions.less
@@ -1,5 +1,55 @@
 .action-button {
   cursor: pointer;
   background-color: @action-secondary-background-color;
-  border: 1px solid @action-secondary-border-color;
+
+  &.minor {
+    border: 1px solid @action-secondary-border-color;
+  }
+
+  &.major {
+    @shadow-color: fade(darken(@action-secondary-background-color, 80%), 60%);
+  
+    padding: 0.5rem;
+    border-radius: 0.75rem;
+    width: 100%;
+    height: 100%;
+    display: block;
+    position: relative;
+    text-align: center;
+    font-family: "Georgia";
+    font-variant: small-caps;
+
+    &::before, &::after {
+      content: '';
+      pointer-events: none;
+      display: block;
+      border-radius: inherit;
+      position: absolute;
+    }
+
+    &::before {
+      box-shadow: inset 0 0 3px 1px @shadow-color;
+
+      top: 1px;
+      right: 1px;
+      left: 1px;
+      bottom: 1px;
+    }
+
+    &::after {
+      border: 2px solid @action-secondary-border-color;
+      box-shadow: 0 0 3px 0 @shadow-color;
+      background-image: linear-gradient(
+        to bottom,
+        fade(darken(@action-secondary-background-color, 10%), 20%),
+        fade(lighten(@action-secondary-background-color, 10%), 20%),
+        fade(darken(@action-secondary-background-color, 10%), 20%)
+      );
+      
+      top: 0;
+      right: 0;
+      left: 0;
+      bottom: 0;
+    }
+  }
 }
