--- a/frontend/src/styles/icons.less
+++ b/frontend/src/styles/icons.less
@@ -42,4 +42,8 @@
   &.drag-indicator {
     background-image: url('/assets/icons/drag_indicator-24px.svg');
   }
+
+  &.delete {
+    background-image: url('/assets/icons/delete-24px.svg');
+  }
 }
