created patch endpoint to save notes

--- a/frontend/src/app/notes-view/components/note-view/note-view.component.html
+++ b/frontend/src/app/notes-view/components/note-view/note-view.component.html
@@ -8,4 +8,7 @@
   <div class="note-variables">
     notes variables will be listed here
   </div>
+  <div class="actions">
+    <div class="action-button major" (click)="saveNote()">Save note</div>
+  </div>
 </ng-container>
