note content is not affected by sanitization now

--- a/frontend/src/app/notes-view/components/note-view/note-view.component.html
+++ b/frontend/src/app/notes-view/components/note-view/note-view.component.html
@@ -1,9 +1,7 @@
 <ng-container *ngIf="note">
-  <div class="note-title">
-    {{note.title}}
+  <div #noteTitle class="note-title" contenteditable [innerHTML]="note.title">
   </div>
-  <div class="note-content" contenteditable>
-    {{note.content}}
+  <div #noteContent class="note-content" contenteditable [innerHTML]="note.content">
   </div>
   <div class="note-variables">
     notes variables will be listed here
