--- a/frontend/src/app/search/components/search/search.component.html
+++ b/frontend/src/app/search/components/search/search.component.html
@@ -1,5 +1,5 @@
 <div class="search">
-  <input placeholder="search" type="text"/>
+  <input class="input with-icon-left with-icon-right" placeholder="search" type="text"/>
   <i class="icon search"></i>
   <button class="submit-button" type="submit">
     <i class="icon arrow-right-tip"></i>
