--- a/frontend/src/styles/styles.less
+++ b/frontend/src/styles/styles.less
@@ -17,3 +17,27 @@ p {
   line-height: 1rem;
   font-size: 1rem;
 }
+
+.section {
+  border: 1px solid @section-primary-border-color;
+  background-color: @section-primary-background-color;
+  border-radius: 0.5rem;
+}
+
+.input {
+  min-height: 1rem;
+  line-height: 1rem;
+  padding: 0.25rem 0.5rem;
+  border-radius: 0.5rem;
+  border: 1px inset @primary-border-color;
+  color: @secondary-text-color;
+  background-color: @secondary-background-color;
+  font-family: Roboto-Light;
+
+  &.with-icon-left {
+    padding-left: 2rem;
+  }
+  &.with-icon-right {
+    padding-right: 2rem;
+  }
+}
