--- a/frontend/src/app/widget/widget.component.html
+++ b/frontend/src/app/widget/widget.component.html
@@ -1,4 +1,4 @@
-<div class="widget-wrapper">
+<div class="widget-wrapper section-primary">
   <div class="widget-title expanded" appExpandable>
     <span>{{title}}</span>
   </div>
