--- a/frontend/src/app/browse/components/entries-list/entries-list.component.less
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.less
@@ -10,25 +10,22 @@
 .entry {
   display: grid;
   grid-template-columns: 13rem @space-for-expand-icons;
-  grid-template-areas: "label icon";
+  grid-template-rows: 2rem;
+  grid-template-areas: "title icon";
   column-gap: @list-elements-spacing;
+  row-gap: @list-elements-spacing;
   user-select: none;
   align-items: center;
   margin-left: @level-indentation;
 
-  & > span, & > ::ng-deep .icon {
+  .note-title {
     padding: @list-elements-padding 2*@list-elements-padding @list-elements-padding 6*@list-elements-padding;
-    border-radius: 0.25rem;
     font-size: @expand-icons-size;
     line-height: @expand-icons-size;
-    margin-bottom: @list-elements-spacing;
-  }
-
-  & > span {
-    grid-area: label;
+    grid-area: title;
   }
   
-  & > ::ng-deep .icon {
+  .note-delete {
     grid-area: icon;
     padding: @list-elements-padding;
     width: @expand-icons-size;
