--- a/frontend/src/app/search/components/search/search.component.less
+++ b/frontend/src/app/search/components/search/search.component.less
@@ -7,10 +7,7 @@
     height: 1rem;
     width: 13rem;
     font-size: 1rem;
-
-    &.italic-text {
-      font-style: italic;
-    }
+    color: @text-secondary-color;
   }
 
   .icon.search {
@@ -33,8 +30,8 @@
     filter: opacity(0.75);
     background: none;
     cursor: pointer;
-    background-color: @action-secondary-background-color;
-    border: 1px solid @action-secondary-border-color;
+    background-color: @input-background-color;
+    border: 1px solid @input-border-color;
     border-radius: 0.25rem;
     margin-top: 1px;
 
