--- a/frontend/src/app/widget/widget.component.less
+++ b/frontend/src/app/widget/widget.component.less
@@ -4,10 +4,9 @@
 @border-width: 0.125rem;
 
 .widget-wrapper {
-  border: 2px solid @section-primary-border-color;
-  background-color: @section-primary-background-color;
   padding: @widget-padding;
   position: relative;
+  border-radius: 0.5rem;
 
   .widget-title {
     @line-height: 1rem;
@@ -22,8 +21,10 @@
     line-height: @line-height;
     top: -(@elem-height / 2);
     left: 2 * @widget-padding;
-    background-color: @section-primary-background-color;
+    background-color: inherit;
     font-family: Philosopher;
+    border-radius: 0.5rem 0.5rem 0 0;
+    border-color: inherit;
 
     &::before {
       content: '';
@@ -33,9 +34,10 @@
       height: calc(@elem-height / 2 - @border-width);
       width: calc(100%);
       border-style: solid;
-      border-color: @section-primary-border-color;
+      border-color: inherit;
       border-width: @border-width;
       border-bottom: 0;
+      border-radius: 0.5rem 0.5rem 0 0;
       z-index: -1;
       padding: 0;
       margin: 0;
