--- a/frontend/src/styles/icons.less
+++ b/frontend/src/styles/icons.less
@@ -2,9 +2,9 @@
 
 .icon {
   display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  background-position: top center;
+  width: 1rem;
+  height: 1rem;
+  background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
 
