--- a/frontend/src/app/browse/components/entries-list/entries-list.component.less
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.less
@@ -23,6 +23,7 @@
     font-size: @expand-icons-size;
     line-height: @expand-icons-size;
     grid-area: title;
+    justify-content: left;
   }
   
   .note-delete {
