--- a/frontend/src/app/browse/components/browser/browser.component.less
+++ b/frontend/src/app/browse/components/browser/browser.component.less
@@ -1,18 +1,5 @@
-@import '../../../../styles/destyle-lists.less';
-
-
-.browser {
-  width: 100%;
-  overflow-x: auto;
-}
-
-.entries-group:not(:last-of-type) {
-  margin-bottom: 1rem;
-}
-
-.entries-group-name {
-  font-weight: bold;
-  font-size: 1.2rem;
-  margin-bottom: 0.25rem;
-  font-family: Philosopher;
+::ng-deep .browser {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
