changed entries-list component selector

--- a/frontend/src/app/browse/components/browser/browser.component.html
+++ b/frontend/src/app/browse/components/browser/browser.component.html
@@ -1,8 +1,6 @@
-<ul
+<app-entries-list
   *ngIf="notes"
   class="browser"
   dragula="notes-group"
-  [(dragulaModel)]="notes"
-  app-entries-list
   [notes]="notes">
-</ul>
+</app-entries-list>
