--- a/frontend/src/app/browse/components/entries-list/entries-list.component.html
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.html
@@ -1,15 +1,14 @@
-<ng-container *ngFor="let note of notes; trackBy: notesTrackingFn ">
-  <li class="entry" [appExpandable]="note.childNotes?.length > 0">
-    <span class="action-button minor note-title" [routerLink]="['note', note._id]">
-      {{note.title}}
-    </span>
-    <!-- <div class="action-button minor note-delete" (click)="deleteNoteById(note._id)">
-      <i class="icon delete"></i>
-    </div> -->
-    <ul *ngIf="note.childNotes?.length > 0 && fetchedNotes[note._id]"
-      class="subentries"
-      app-entries-list
-      [notes]="fetchedNotes[note._id]"
-    ></ul>
-  </li>
-</ng-container>
+<ul>
+  <ng-container *ngFor="let note of notes; trackBy: notesTrackingFn">
+    <li class="entry" [appExpandable]="note.childNotes?.length > 0">
+      <span class="action-button minor note-title" [routerLink]="['note', note._id]">
+        {{note.title}}
+      </span>
+      <app-entries-list *ngIf="note.childNotes?.length > 0 && fetchedNotes[note._id]"
+        class="subentries"
+        app-entries-list
+        [notes]="fetchedNotes[note._id]"
+      ></app-entries-list>
+    </li>
+  </ng-container>
+</ul>
