notes are draggable and ready to add logic moving them around

--- a/frontend/src/app/browse/components/entries-list/entries-list.component.less
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.less
@@ -45,3 +45,10 @@
   }
 }
 
+.drop-zone {
+  &.indicate-drop-zone {
+    border-style: dashed;
+    margin-left: 0.125rem;
+    margin-right: -0.125rem;
+  }
+}
