--- a/frontend/src/app/browse/components/entries-list/entries-list.component.html
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.html
@@ -1,10 +1,11 @@
 <ul>
   <ng-container *ngFor="let note of notes; trackBy: notesTrackingFn">
     <li class="entry" [appExpandable]="note.childNotes?.length > 0">
-      <span class="action-button minor note-title" [routerLink]="['note', note._id]">
+      <span appDraggable class="drop-zone action-button minor note-title" [routerLink]="['note', note._id]">
         {{note.title}}
       </span>
-      <app-entries-list *ngIf="note.childNotes?.length > 0 && fetchedNotes[note._id]"
+      <app-entries-list
+        *ngIf="note.childNotes?.length > 0 && fetchedNotes[note._id]"
         class="subentries"
         app-entries-list
         [notes]="fetchedNotes[note._id]"
