event about acquiring dragged note is sent to proper drop note + amendments

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="layout">
   <app-header class="header"></app-header>
 
-  <app-widget title="Browser" class="browser">
+  <app-widget widgetTitle="Browser" class="browser">
     <app-browser></app-browser>
   </app-widget>
 
