--- a/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.less
+++ b/frontend/src/app/browse/components/draggable-note-entry/draggable-note-entry.component.less
@@ -5,3 +5,11 @@
   grid-area: title;
   justify-content: left;
 }
+
+.drop-zone {
+  &.indicate-drop-zone {
+    border-style: dashed;
+    margin-left: 0.125rem;
+    margin-right: -0.125rem;
+  }
+}
