--- a/frontend/src/app/notes-view/components/note-view/note-view.component.html
+++ b/frontend/src/app/notes-view/components/note-view/note-view.component.html
@@ -1,4 +1,4 @@
-<app-widget title="Notes view">
+<app-widget widgetTitle="Notes view">
   <div class="note-view" *ngIf="note">
 
     <div class="note-title section-secondary">
