--- a/frontend/src/app/widget/widget.component.html
+++ b/frontend/src/app/widget/widget.component.html
@@ -1,6 +1,6 @@
 <div class="widget-wrapper section-primary">
   <div class="widget-title expanded" appExpandable>
-    <span>{{title}}</span>
+    <span>{{widgetTitle}}</span>
   </div>
   <div class="widget-content">
     <ng-content></ng-content>
