--- a/frontend/src/app/browse/components/entries-list/entries-list.component.html
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.html
@@ -1,15 +1,16 @@
 <ul>
   <ng-container *ngFor="let note of notes; trackBy: notesTrackingFn">
     <li class="entry" [appExpandable]="note.childNotes?.length > 0">
-      <app-draggable-note-entry [note]="note">
+      <app-draggable-note-entry
+        [note]="note">
       </app-draggable-note-entry>
       <!-- icon for expandable note placeholder -->
       <app-entries-list
         *ngIf="note.childNotes?.length > 0 && fetchedNotes[note._id]"
         class="subentries"
         app-entries-list
-        [notes]="fetchedNotes[note._id]"
-      ></app-entries-list>
+        [notes]="fetchedNotes[note._id]">
+      </app-entries-list>
     </li>
   </ng-container>
 </ul>
