--- a/frontend/src/app/browse/components/entries-list/entries-list.component.html
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.html
@@ -2,6 +2,7 @@
   <ng-container *ngFor="let note of notes; trackBy: notesTrackingFn">
     <li class="entry" [appExpandable]="note.childNotes?.length > 0">
       <app-draggable-note-entry
+        [parentNote]="parentNote"
         [note]="note">
       </app-draggable-note-entry>
       <!-- icon for expandable note placeholder -->
@@ -9,6 +10,7 @@
         *ngIf="note.childNotes?.length > 0 && fetchedNotes[note._id]"
         class="subentries"
         app-entries-list
+        [parentNote]="note"
         [notes]="fetchedNotes[note._id]">
       </app-entries-list>
     </li>
