--- a/frontend/src/app/notes-view/components/note-view/note-view.component.html
+++ b/frontend/src/app/notes-view/components/note-view/note-view.component.html
@@ -15,7 +15,7 @@
 
     <div class="note-actions section-secondary">
       <div class="action-button major" (click)="saveNote()">Save note</div>
-      <div class="action-button major" (click)="deleteNoteById(note._id)">Remove note</div>
+      <div class="action-button major" (click)="deleteNote(note)">Remove note</div>
     </div>
 
   </div>
