--- a/frontend/src/app/browse/components/entries-list/entries-list.component.html
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.html
@@ -1,20 +1,22 @@
 <ul>
   <ng-container *ngFor="let note of notes; trackBy: notesTrackingFn">
     <li
-      #entryLabel
-      *ngIf="notesChildren[note._id]"
-      class="entry"
-      [appExpandable]="notesChildren[note._id].length > 0"
+    #entryLabel
+    *ngIf="notesChildren[note._id]"
+    class="entry"
+    [appExpandable]="notesChildren[note._id].length > 0"
     >
       <app-draggable-note-entry
-        [note]="note">
-      </app-draggable-note-entry>
+      class="action-button minor note-title"
+      [appDropZone]="note.parentNoteId"
+      [note]="note"
+      ></app-draggable-note-entry>
       <!-- icon for expandable note placeholder -->
       <app-entries-list
-        *ngIf="notesChildren[note._id].length > 0 && entryLabel.classList.contains('expanded')"
-        class="subentries"
-        app-entries-list
-        [notes]="notesChildren[note._id]"
+      *ngIf="notesChildren[note._id].length > 0 && entryLabel.classList.contains('expanded')"
+      class="subentries"
+      app-entries-list
+      [notes]="notesChildren[note._id]"
       ></app-entries-list>
     </li>
   </ng-container>
