notes browser is updated on note save as well now

--- a/frontend/src/app/browse/components/entries-list/entries-list.component.html
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.html
@@ -8,7 +8,7 @@
     >
       <app-draggable-note-entry
       class="action-button minor note-title"
-      [appDropZone]="note.parentNoteId"
+      [appDropZone]="note._id"
       [note]="note"
       ></app-draggable-note-entry>
       <!-- icon for expandable note placeholder -->
