fixed styling and race condition issues

--- a/frontend/src/app/browse/components/browser/browser.component.less
+++ b/frontend/src/app/browse/components/browser/browser.component.less
@@ -16,7 +16,7 @@ app-entries-list {
     .top-drop {
       display: flex;
 
-      .indicate-drop-zone {
+      &.indicate-drop-zone {
         opacity: 1;
       }
     }
