--- a/frontend/src/app/widget/widget.component.html
+++ b/frontend/src/app/widget/widget.component.html
@@ -1,5 +1,5 @@
 <div class="widget-wrapper section-primary">
-  <div class="widget-title expanded" appExpandable>
+  <div [itemId]="widgetTitle" class="widget-title expanded" appExpandable>
     <span>{{widgetTitle}}</span>
   </div>
   <div class="widget-content">
