--- a/frontend/src/app/notes-view/components/note-view/note-view.component.html
+++ b/frontend/src/app/notes-view/components/note-view/note-view.component.html
@@ -14,8 +14,9 @@
     </div>
 
     <div class="note-actions section-secondary">
-      <div class="action-button major" (click)="saveNote()">Save note</div>
-      <div class="action-button major" (click)="deleteNote(note)">Remove note</div>
+      <div class="action-button major" (click)="updateNote()">Save note</div>
+      <div class="action-button major" (click)="deleteNote()">Remove note</div>
+      <div class="action-button major" (click)="toggleCategory()">Toggle Category</div>
     </div>
 
   </div>
