--- a/frontend/src/app/browse/components/entries-list/entries-list.component.less
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.less
@@ -22,6 +22,19 @@
     grid-area: title;
     justify-content: left;
     margin-bottom: 0.5rem;
+
+    &.category {
+      font-size: 1.2rem;
+      line-height: 1.2rem;
+      font-weight: bold;
+      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      background-color: transparent;
+      border-color: transparent;
+
+      &.indicate-drop-zone {
+        border-color: @action-secondary-border-color;
+      }
+    }
   }
 
   & > ::ng-deep .icon {
