browser now understands drag modes and changes cursors accordingly

--- a/frontend/src/app/browse/components/browser/browser.component.html
+++ b/frontend/src/app/browse/components/browser/browser.component.html
@@ -1,7 +1,9 @@
 <app-entries-list
+style="overflow: auto"
 *ngIf="notes"
-[notes]="notes">
-</app-entries-list>
+[notes]="notes"
+[browserReference]="browser.nativeElement"
+></app-entries-list>
 <div
 [appDropZone]="topNotesParentKey"
 class="top-drop action-button minor"
