--- a/frontend/src/app/browse/components/entries-list/entries-list.component.less
+++ b/frontend/src/app/browse/components/entries-list/entries-list.component.less
@@ -1,4 +1,3 @@
-@import '../../../../styles/colors.less';
 @import '../../../../styles/destyle-lists.less';
 
 @expand-icons-size: 1rem;
@@ -28,12 +27,9 @@
       line-height: 1.2rem;
       font-weight: bold;
       font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      border-width: 1px;
       background-color: transparent;
       border-color: transparent;
-
-      &.indicate-drop-zone {
-        border-color: @action-secondary-border-color;
-      }
     }
   }
 
@@ -50,13 +46,5 @@
 
   &.expanded > .subentries {
     display: initial;
-  }
-}
-
-.drop-zone {
-  &.indicate-drop-zone {
-    border-style: dashed;
-    margin-left: 0.125rem;
-    margin-right: -0.125rem;
   }
 }
